--- a/packages/storybook-addon/package.json
+++ b/packages/storybook-addon/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "@storybook-vue/nuxt",
-  "version": "0.2.8",
+  "name": "@tian-zhihui/storybook-vue-nuxt",
+  "version": "0.2.9",
   "description": "Storybook addon for Nuxt and Vite",
+  "publishConfig": {
+    "@tian-zhihui/storybook-vue-nuxt": "https://npm.pkg.github.com"
+  },
   "license": "MIT",
   "homepage": "https://storybook.nuxtjs.org",
   "repository": {
@@ -86,9 +89,6 @@
     "typescript": "^5.4.3",
     "unbuild": "^2.0.0",
     "vite": "^5.2.2"
-  },
-  "publishConfig": {
-    "access": "public"
   },
   "bundler": {
     "entries": [
