--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-storybook",
+  "name": "@tian-zhihui/storybook",
   "version": "",
   "license": "MIT",
   "repository": "nuxt-modules/storybook",
