--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -22,6 +22,6 @@ jobs:
           cache: pnpm
 
       - name: Publish
-        run: pnpm publish
+        run: pnpm publish --recursive --report-summary --no-git-checks
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
