--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
-          registry-url: https://registry.npmjs.org
+          registry-url: 'https://npm.pkg.github.com'
           cache: pnpm
 
       - name: Install dependencies
